--- a/app/src/main/res/layout/activity4.xml
+++ b/app/src/main/res/layout/activity4.xml
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/matrimony">
+    android:background="@drawable/matrimony"
+    android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+
 
         <androidx.cardview.widget.CardView
             android:id="@+id/list"
@@ -24,55 +22,56 @@
                     android:id="@+id/name"
                     android:layout_width="60dp"
                     android:layout_height="44dp"
-                    android:layout_marginStart="16dp"
+                    android:layout_margin="12dp"
                     android:text="@string/Name"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.077" />
+                    app:layout_constraintVertical_bias="0.011" />
 
                 <TextView
-                    android:id="@+id/email"
+                    android:id="@+id/E"
                     android:layout_width="35dp"
                     android:layout_height="45dp"
-                    android:layout_marginTop="8dp"
-                    android:text="Email"
+                    android:layout_marginStart="8dp"
+                    android:text="@string/Email"
+                    app:layout_constraintBottom_toBottomOf="@id/name"
                     app:layout_constraintStart_toEndOf="@+id/name"
-                    app:layout_constraintBottom_toBottomOf="@id/name" />
+                    app:layout_constraintTop_toTopOf="@+id/name"
+                    app:layout_constraintVertical_bias="0.0" />
 
                 <TextView
-                    android:id="@+id/phone"
+                    android:id="@+id/P"
                     android:layout_width="42dp"
                     android:layout_height="20dp"
                     android:layout_marginStart="12dp"
-                    android:layout_marginTop="12dp"
-                    android:text="Phone"
+                    android:text="@string/Phone"
+                    app:layout_constraintEnd_toStartOf="@+id/dob"
+                    app:layout_constraintHorizontal_bias="1.0"
                     app:layout_constraintStart_toEndOf="@+id/name"
                     app:layout_constraintStart_toStartOf="@id/name"
-                    app:layout_constraintTop_toBottomOf="@id/name" />
+                    app:layout_constraintTop_toBottomOf="@+id/name" />
 
                 <TextView
                     android:id="@+id/dob"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="60dp"
-                    android:layout_marginTop="60dp"
-                    android:text="DOB"
-                    app:layout_constraintStart_toEndOf="@+id/email"
-                    app:layout_constraintStart_toStartOf="@id/email"
-                    app:layout_constraintTop_toBottomOf="@id/email" />
+                    android:layout_marginStart="12dp"
+                    android:text="@string/DOB"
+                    app:layout_constraintStart_toEndOf="@+id/E"
+                    app:layout_constraintStart_toStartOf="@id/E"
+                    app:layout_constraintTop_toBottomOf="@+id/P" />
 
                 <TextView
-                    android:id="@+id/qualification"
+                    android:id="@+id/Q"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Qualification"
+                    android:layout_marginTop="32dp"
+                    android:layout_marginEnd="140dp"
+                    android:text="@string/Qualification"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    tools:layout_editor_absoluteX="238dp"
-                    tools:layout_editor_absoluteY="56dp" />
+                    app:layout_constraintTop_toTopOf="parent" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
     </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
