--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,8 +44,7 @@
                 android:text="@string/name"
                 android:textColor="#FDF8C8"
                 android:textSize="24sp"
-                android:textStyle="bold"
-                />
+                android:textStyle="bold" />
 
             <EditText
                 android:id="@+id/mail"
@@ -138,6 +137,18 @@
                 android:onClick="sign"
                 android:text="@string/signIn"
                 android:textColor="#FDF8C8"
+                android:textSize="24sp"
+                android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/update"
+                android:layout_width="143dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                android:contentDescription="@string/edit"
+                android:gravity="center"
+                android:text="@string/edit"
                 android:textSize="24sp"
                 android:textStyle="bold" />
 
