--- a/app/src/main/res/layout/loginpage.xml
+++ b/app/src/main/res/layout/loginpage.xml
@@ -65,13 +65,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
+        android:layout_marginRight="50dp"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/PasswordLabel"
-            android:layout_width="28dp"
+            android:layout_width="5dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
             android:layout_weight="1"
             android:contentDescription="@string/PasswordLabel"
             android:gravity="center"
@@ -82,8 +82,9 @@
 
         <EditText
             android:id="@+id/LoginPassword"
-            android:layout_width="91dp"
+            android:layout_width="60dp"
             android:layout_height="45dp"
+            android:layout_marginLeft="10dp"
             android:layout_weight="1"
             android:background="#FDF8C8"
             android:contentDescription="@string/Password2"
